--- a/index.html
+++ b/index.html
@@ -102,19 +102,158 @@
       </div>
     </div>
 
-    <!-- FAQ section -->
-    <div class="container-fluid mt-3">
-      <div class="row hero-section align-items-center">
-        <div class="col-md-6" style="padding-left: 20px">
-         <h1>
-          FAQ
-         </h1>
+    <div class="container-fluid">
+      <div class="row mt-4">
+        <div class="col-md-4 d-flex flex-column align-items-center new-box">
+          <div class="empower-box-small mb-4">
+            <img
+              src="./asset/img/empower-pic.png"
+              class="img-fluid"
+              alt="..."
+            />
+          </div>
+          <div class="empower-box-big">
+            <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
+            <div class="empower-text">
+              <h4>Prime</h4>
+              <p>
+                Our smart NFC cards enable seamless sharing of contact
+                information, making networking easier than ever.
+              </p>
+            </div>
+          </div>
         </div>
-        <div class="col-md-6 d-flex justify-content-center align-items-center">
-         
+        <div class="col-md-4 d-flex flex-column align-items-center">
+          <div class="empower-box-big mb-4">
+            <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
+          </div>
+          <div class="empower-box-small">
+            <img
+              src="./asset/img/empower-pic.png"
+              class="img-fluid"
+              alt="..."
+            />
+            <div class="empower-text">
+              <h4>Deluxe</h4>
+              <p>Effortlessly manage and organize your contacts with our smart NFC cards, ensuring you never lose important connections.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4 d-flex flex-column align-items-center">
+          <div class="empower-box-small mb-4">
+            <img
+              src="./asset/img/empower-pic.png"
+              class="img-fluid"
+              alt="..."
+            />
+          </div>
+          <div class="empower-box-big">
+            <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
+            <div class="empower-text">
+              <h4>Elite</h4>
+              <p>Our smart NFC cards streamline communication and enhance productivity, keeping you ahead in the fast-paced digital world.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    
+
+    <!-- FAQ section -->
+    <div class="container-fluid mt-3">
+      <div class="row align-items-center" style="padding: 30px">
+        <div class="col-md-5" style="padding-left: 20px">
+          <h1 class="faq-heading">FAQs</h1>
+          <p class="faq-paragraph">
+            Find answers to common questions about our smart NFC cards and
+            services.
+          </p>
+        </div>
+
+        <div class="col-md-7">
+          <div class="accordion accordion-flush" id="accordionFlushExample">
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                >
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the first item's accordion body.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseTwo"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseTwo"
+                >
+                  Accordion Item #2
+                </button>
+              </h2>
+              <div
+                id="flush-collapseTwo"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the second item's accordion body. Let's imagine this being
+                  filled with some actual content.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseThree"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseThree"
+                >
+                  Accordion Item #3
+                </button>
+              </h2>
+              <div
+                id="flush-collapseThree"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the third item's accordion body. Nothing more exciting
+                  happening here in terms of content, but just filling up the
+                  space to make it look, at least at first glance, a bit more
+                  representative of how this would look in a real-world
+                  application.
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
