index changes add

--- a/index.html
+++ b/index.html
@@ -135,7 +135,10 @@
             />
             <div class="empower-text">
               <h4>Deluxe</h4>
-              <p>Effortlessly manage and organize your contacts with our smart NFC cards, ensuring you never lose important connections.</p>
+              <p>
+                Effortlessly manage and organize your contacts with our smart
+                NFC cards, ensuring you never lose important connections.
+              </p>
             </div>
           </div>
         </div>
@@ -151,7 +154,10 @@
             <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
             <div class="empower-text">
               <h4>Elite</h4>
-              <p>Our smart NFC cards streamline communication and enhance productivity, keeping you ahead in the fast-paced digital world.</p>
+              <p>
+                Our smart NFC cards streamline communication and enhance
+                productivity, keeping you ahead in the fast-paced digital world.
+              </p>
             </div>
           </div>
         </div>
@@ -253,6 +259,117 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="container-fluid">
+      <div class="row">
+        <div class="">
+          <p class="text-center">Articles</p>
+          <h3 class="text-center">Discover Valuable Resources Here</h3>
+          <p class="text-center">Stay Informed with Our Latest Articles</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem">
+            <img
+              src="./asset/img/card.png"
+              class="card-img-top"
+              alt="card.png"
+            />
+            <div class="card-body">
+              <div class="d-flex">
+                <p class="me-4">category</p>
+                <p>5 min Read</p>
+              </div>
+              <h5 class="card-title">Unlocking the Power of Smart Cards</h5>
+              <p class="card-text">
+                Discover how smart cards can revolutionize your daily life.
+              </p>
+              <a href="#" class="read-more-link"
+                >Read more <i class="bi bi-caret-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem">
+            <img
+              src="./asset/img/card.png"
+              class="card-img-top"
+              alt="card.png"
+            />
+            <div class="card-body">
+              <div class="d-flex">
+                <p class="me-4">category</p>
+                <p>5 min Read</p>
+              </div>
+              <h5 class="card-title">Unlocking the Power of Smart Cards</h5>
+              <p class="card-text">
+                Discover how smart cards can revolutionize your daily life.
+              </p>
+              <a href="#" class="read-more-link"
+                >Read more <i class="bi bi-caret-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem">
+            <img
+              src="./asset/img/card.png"
+              class="card-img-top"
+              alt="card.png"
+            />
+            <div class="card-body">
+              <div class="d-flex">
+                <p class="me-4">category</p>
+                <p>5 min Read</p>
+              </div>
+              <h5 class="card-title">Unlocking the Power of Smart Cards</h5>
+              <p class="card-text">
+                Discover how smart cards can revolutionize your daily life.
+              </p>
+              <a href="#" class="read-more-link"
+                >Read more <i class="bi bi-caret-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card" style="width: 18rem">
+            <img
+              src="./asset/img/card.png"
+              class="card-img-top"
+              alt="card.png"
+            />
+            <div class="card-body">
+              <div class="d-flex">
+                <p class="me-4">category</p>
+                <p>5 min Read</p>
+              </div>
+              <h5 class="card-title">Unlocking the Power of Smart Cards</h5>
+              <p class="card-text">
+                Discover how smart cards can revolutionize your daily life.
+              </p>
+              <a href="#" class="read-more-link"
+                >Read more <i class="bi bi-caret-right"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="d-flex justify-content-center">
+        <button
+          type="button"
+          class="btn btn-outline-light justify-content-center pt-2"
+        >
+          View All
+        </button>
       </div>
     </div>
   </body>
