--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
         </div>
       </nav>
     </div>
+
     <!-- hero section -->
     <div class="container-fluid mt-3">
       <div class="row hero-section align-items-center">
@@ -101,7 +102,66 @@
         </div>
       </div>
     </div>
-
+    <div class="container-fluid mt-4">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-5">
+          <p style="text-align: center">Revolutionize</p>
+          <h1 style="text-align: center">
+            Discover the Power of Smart NFC Cards
+          </h1>
+          <p style="text-align: center;line-height: 28px;" >
+            Our smart NFC cards are designed to revolutionize the way
+            professionals and youth connect and share contact information. With
+            their usefulness, sustainability, and cost-effectiveness, they are
+            the perfect solution for staying connected in today's digital world.
+          </p>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid mt-3">
+      <div class="row d-flex justify-content-around">
+        <div class="about-us-card col-md-3 p-5">
+          <i class="bi bi-box"></i>
+          <h2>Effortless Communication Made Simple</h2>
+          <h6>
+            Our smart NFC cards enable seamless sharing of contact information,
+            eliminating the need for traditional business cards.
+          </h6>
+        </div>
+        <div class="about-us-card col-md-3 p-5">
+          <i class="bi bi-box"></i>
+          <h2>Customize Your Smart NFC Card Design</h2>
+          <h6>
+            With our online card design space, you can easily create a unique
+            and personalized smart NFC card that represents your brand.
+          </h6>
+        </div>
+        <div class="about-us-card col-md-3 p-5">
+          <i class="bi bi-box"></i>
+          <h2>Environmentally Sustainable and Cost-Effective</h2>
+          <h6>
+            Our smart NFC cards are not only technologically advanced but also
+            eco-friendly and budget-friendly.
+          </h6>
+        </div>
+      </div>
+    </div>
+    <div class="container-fluid mt-4">
+      <div class="row d-flex justify-content-center">
+        <div class="col-md-5">
+          <p style="text-align: center">Empower</p>
+          <h1 style="text-align: center">
+            Unlock the Power of Smart NFC Cards
+          </h1>
+          <p style="text-align: center;line-height: 28px;" >
+            Our smart NFC cards are designed to revolutionize the way
+            professionals and youth connect and share contact information. With
+            their usefulness, sustainability, and cost-effectiveness, they are
+            the perfect solution for staying connected in today's digital world.
+          </p>
+        </div>
+      </div>
+    </div>
     <div class="container-fluid">
       <div class="row mt-4">
         <div class="col-md-4 d-flex flex-column align-items-center new-box">
@@ -115,7 +175,7 @@
           <div class="empower-box-big">
             <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
             <div class="empower-text">
-              <h4>Prime</h4>
+              <h4 class="mt-4">Prime</h4>
               <p>
                 Our smart NFC cards enable seamless sharing of contact
                 information, making networking easier than ever.
@@ -134,7 +194,7 @@
               alt="..."
             />
             <div class="empower-text">
-              <h4>Deluxe</h4>
+              <h4 class="mt-4">Deluxe</h4>
               <p>
                 Effortlessly manage and organize your contacts with our smart
                 NFC cards, ensuring you never lose important connections.
@@ -153,13 +213,21 @@
           <div class="empower-box-big">
             <img src="./asset/img/empoer-big.png" class="img-fluid" alt="..." />
             <div class="empower-text">
-              <h4>Elite</h4>
+              <h4 class="mt-4">Elite</h4>
               <p>
                 Our smart NFC cards streamline communication and enhance
                 productivity, keeping you ahead in the fast-paced digital world.
               </p>
             </div>
           </div>
+        </div>
+        <div class="d-flex justify-content-center">
+          <button
+            type="button"
+            class="btn btn-outline-light justify-content-center pt-1 px-4 mt-3"
+          >
+          Learn More <i class="bi bi-caret-right"></i>
+          </button>
         </div>
       </div>
     </div>
@@ -291,8 +359,7 @@
                 Discover how smart cards can revolutionize your daily life.
               </p>
               <a href="#" class="read-more-link"
-                >Read more <i class="bi bi-caret-right"></i
-              ></a>
+                >Read more <i class="bi bi-caret-right"></i></a>
             </div>
           </div>
         </div>
