--- a/aboutUs.html
+++ b/aboutUs.html
@@ -75,6 +75,7 @@
       </div>
     </nav>
   </div>
+  <!-- about us 1st section -->
   <div class="container-fluid mt-3">
     <div class="row hero-section align-items-center">
       <div class="col-md-6" style="padding-left: 20px">
@@ -97,6 +98,7 @@
       </div>
     </div>
   </div>
+  <!-- about us 2nd section -->
   <div>
     <div class="container-fluid mt-3">
     <div class="row">
@@ -132,14 +134,16 @@
         <div class="container-fluid mt-3">
           <div class="row border border-primary">
             <div class="col border border-primary p-5">
-              <h5>Unique Features</h5>
+              <h5 style="text-align: center;">Unique Features</h5>
+              <h6 style="text-align: center;">Our smart NFC cards offer advanced features such as instant data transfer and customizable designs.</h6>
             </div>
             <div class="col border border-primary p-5">
-              <h5>Efficient Networking</h5>
+              <h5 style="text-align: center;">Efficient Networking</h5>
+              <h6 style="text-align: center;">Connect with others seamlessly and build valuable connections with our smart NFC cards.</h6>
             </div>
           </div>
         </div>
-
+        
        </div>
        <div class="col-md-5 p-5">
         <img
@@ -152,19 +156,36 @@
       </div>
     </div>
   </div>
+  <!-- aboutus-4th-section -->
   <div class="container-fluid mt-3">
     <div class="row border border-primary d-flex justify-content-center">
     
         <div class="col-md-5 border border-primary" ><h6 style="text-align: center;">Innovative</h6>
-          <h1 style="text-align: center;">
-            Empowering Individuals and Organizations with Smart Technology
-          </h1>
-          <h5 style="text-align: center;">
-            At Manjithaaza, we specialize in providing smart digital accessories and digital services. Our  focus is on creating and providing smart NFC cards that allow professionals and youth to communicate their contact information easily and effectively. Our smart cards are useful, environmentally sustainable, and cost-effective, empowering individuals and organizations to stay connected, organized, and productive in today's fast-paced digital world.
-          </h5>
         </div>
     </div>
   </div>
+</div>
+<div class="container-fluid mt-3">
+  <div class="row border border-primary d-flex justify-content-center">
+  
+      <div class="col-md-7 border border-primary" >
+        <h1 style="text-align: center;">
+          Empowering Individuals and Organizations with Smart Technology
+        </h1>
+      </div>
+  </div>
+</div>
+</div>
+<div class="container-fluid mt-3">
+  <div class="row border border-primary d-flex justify-content-center">
+      <div class="col-md-9 border border-primary" >
+        <h5 style="text-align: center;">
+          At Manjithaaza, we specialize in providing smart digital accessories and digital services. Our  focus is on creating and providing smart NFC cards that allow professionals and youth to communicate their contact information easily and effectively. Our smart cards are useful, environmentally sustainable, and cost-effective, empowering individuals and organizations to stay connected, organized, and productive in today's fast-paced digital world.
+        </h5>
+      </div>
+  </div>
+</div>
+<!-- aboutus-5th-section -->
   <div class="container-fluid mt-3">
     <div class="row d-flex justify-content-around">
        <div class="about-us-card col-md-3 p-5 border border-primary gx-5">
@@ -194,6 +215,134 @@
       </div>
     </div>
   </div>
-
+  <!-- aboutus-6th-section -->
+  <div class="container-fluid mt-3">
+    <div class="row border border-primary d-flex justify-content-center">
+        <div class="col-md-7 border border-primary" ><h6 style="text-align: center;">Innovative</h6>
+          <h2 style="text-align: center;">Meet Our Team</h2>
+          <h5 style="text-align: center;">Get to know the talented individuals behind our company.</h5>
+        </div>
+    </div>
+  </div>
+</div>
+<!-- aboutus-7th-section -->
+<div class="row border border-primary">
+  <div class="col p-5 border border-primary">
+    <img
+              src="./asset/img/about_pic1.png"
+              class="img-fluid"
+              alt="Hero Section Image"
+            />
+            <h6 style="text-align: center;">John Doe</h6>
+            <h6 style="text-align: center;">CEO</h6>
+            <h6 style="text-align: center;">John is a visionary leader with a passion for driving innovation and growth.</h6>
+            <div style="text-align: center;">
+              <i class="bi bi-linkedin mx-4"></i>
+              <i class="bi bi-twitter-x"></i>
+              <i class="bi bi-dribbble"></i>
+            </div>
+    </div>
+    <div class="col p-5 border border-primary">
+      <img
+                src="./asset/img/about_pic1.png"
+                class="img-fluid"
+                alt="Hero Section Image"
+              />
+              <h6 style="text-align: center;">Jane Smith</h6>
+              <h6 style="text-align: center;">CTO</h6>
+            <h6 style="text-align: center;">Jane is a technology expert who oversees our product development and technical operations.</h6>
+      </div>
+  </div>
+  <div class="row border border-primary">
+    <div class="col p-5 border border-primary">
+      <img
+                src="./asset/img/about_pic1.png"
+                class="img-fluid"
+                alt="Hero Section Image"
+              />
+              <h6 style="text-align: center;">David Johnson</h6>
+              <h6 style="text-align: center;">Marketing Manager</h6>
+              <h6 style="text-align: center;">David is a creative marketer who leads our brand strategy and customer acquisition efforts.</h6>
+      </div>
+      <div class="col p-5 border border-primary">
+        <img
+                  src="./asset/img/about_pic1.png"
+                  class="img-fluid"
+                  alt="Hero Section Image"
+                />
+                <h6 style="text-align: center;">Sarah Williams</h6>
+                <h6 style="text-align: center;">Finance Director</h6>
+              <h6 style="text-align: center;">Sarah is a financial expert who ensures the stability and growth of our company.</h6>
+        </div>
+    </div>
+</div>
+<!-- aboutus-8th-section -->
+<div class="container-fluid mt-3">
+  <div class="row border border-primary d-flex justify-content-center">
+      <div class="col-md-7 border border-primary" ><h4 style="text-align: center;">We’re hiring!</h4>
+        <h6 style="text-align: center;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h6>
+        <div class="d-grid gap-2 col-6 mx-auto">
+        <button type="button" class="btn btn-outline-light mt-2" style="margin-right: 20px; text-align: center;">Open positions</button>
+      </div>
+      </div>
+  </div>
+</div>
+<div>
+  <!-- aboutus-9th-section -->
+  <div class="container-fluid mt-3">
+  <div class="row">
+     <div class="col-md-7 p-5">
+      <h3>
+        Unlock the power of smart <br>technology with Manjithaaza's innovative solutions.
+      </h3>
+      <h6>
+        Experience the convenience and efficiency of our smart NFC cards and digital services. Stay connected, organized, and productive in today's fast-paced digital world.
+       </h6>
+     </div>
+     <div class="col-md-5 p-5">
+      <img
+            src="./asset/img/about_pic1.png"
+            class="img-fluid"
+            alt="Hero Section Image"
+          />
+     </div>
+     </div>
+    </div>
+  </div>
+</div>
+<!-- aboutus-10th-section -->
+<div class="container-fluid mt-3">
+  <div class="row border border-primary d-flex justify-content-center">
+      <div class="col-md-7 border border-primary" ><h6 style="text-align: center;">WebFlow</h6>
+        <h5 style="text-align: center;">Our experience with Manjithaaza has been outstanding. Their smart NFC cards have revolutionized the way we exchange contact information.</h5>
+        <h6 style="text-align: center;">John Doe</h6>
+        <h6 style="text-align: center;">CEO, XYZ Company</h6>
+      </div>
+  </div>
+</div>
+<!-- aboutus-11th-section -->
+<div>
+  <div class="container-fluid mt-3">
+  <div class="row">
+     <div class="col-8 p-5">
+      <h1>
+        Empower Your Digital <br>Journey Today
+      </h1>
+      <h3>Contact us for more information or to inquire about our services.</h3>
+       <button type="button" class="btn btn-light me-2">Learn More</button>
+       <button type="button" class="btn btn-outline-light">Log In</button>
+      </div>
+      <div class="col-4 p-5">
+        <img
+        src="./asset/img/about_pic1.png"
+        class="img-fluid"
+        alt="Hero Section Image"
+      />
+      </div>
+     </div>
+    </div>
+  </div>
+</div>
+<!-- footer section -->
 </body>
 </html>
