--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <h1 style="text-align: center">
             Discover the Power of Smart NFC Cards
           </h1>
-          <p style="text-align: center;line-height: 28px;" >
+          <p style="text-align: center; line-height: 28px">
             Our smart NFC cards are designed to revolutionize the way
             professionals and youth connect and share contact information. With
             their usefulness, sustainability, and cost-effectiveness, they are
@@ -153,7 +153,7 @@
           <h1 style="text-align: center">
             Unlock the Power of Smart NFC Cards
           </h1>
-          <p style="text-align: center;line-height: 28px;" >
+          <p style="text-align: center; line-height: 28px">
             Our smart NFC cards are designed to revolutionize the way
             professionals and youth connect and share contact information. With
             their usefulness, sustainability, and cost-effectiveness, they are
@@ -226,8 +226,43 @@
             type="button"
             class="btn btn-outline-light justify-content-center pt-1 px-4 mt-3"
           >
-          Learn More <i class="bi bi-caret-right"></i>
+            Learn More <i class="bi bi-caret-right"></i>
           </button>
+        </div>
+      </div>
+    </div>
+
+    <div>
+      <div class="container-fluid mt-3">
+        <div class="row d-flex justify-content-around">
+          <div class="col-md-5 p-5 ">
+            <div
+              class="design-left  d-flex justify-content-center"
+              style="flex-direction: column"
+            >
+              <p>Design</p>
+              <h2 style="line-height:45px">
+                Create Your Own Unique <br />
+                Smart Card Design
+              </h2>
+              <h6 style="line-height: 25px;">
+                With our Smart Card online design feature, you can easily
+                personalize and customize your own smart card. Choose from a
+                variety of templates, colors, and fonts to create a unique
+                design that reflects your style and brand.
+              </h6>
+              <p>   <i class="bi bi-box" style="margin-right: 5px;"></i> Easy-to-use Design Tools</p>
+              <p><i class="bi bi-box" style="margin-right: 5px;"></i>Endless Design Possibilities</p>
+              <p><i class="bi bi-box" style="margin-right: 5px;"></i>Express Your Personal or Brand Identity</p>
+            </div>
+          </div>
+          <div class="col-md-5 p-5 d-flex justify-content-center">
+            <img
+              src="./asset/img/about_pic1.png"
+              class="img-fluid design"
+              alt="Hero Section Image"
+            />
+          </div>
         </div>
       </div>
     </div>
@@ -359,7 +394,8 @@
                 Discover how smart cards can revolutionize your daily life.
               </p>
               <a href="#" class="read-more-link"
-                >Read more <i class="bi bi-caret-right"></i></a>
+                >Read more <i class="bi bi-caret-right"></i
+              ></a>
             </div>
           </div>
         </div>
