--- a/index.html
+++ b/index.html
@@ -235,25 +235,46 @@
     <div>
       <div class="container-fluid mt-3">
         <div class="row d-flex justify-content-around">
-          <div class="col-md-5 p-5 ">
+          <div class="col-md-5 p-5">
             <div
-              class="design-left  d-flex justify-content-center"
+              class="design-left d-flex justify-content-center"
               style="flex-direction: column"
             >
               <p>Design</p>
-              <h2 style="line-height:45px">
+              <h2 style="line-height: 45px">
                 Create Your Own Unique <br />
                 Smart Card Design
               </h2>
-              <h6 style="line-height: 25px;">
+              <h6 style="line-height: 25px">
                 With our Smart Card online design feature, you can easily
                 personalize and customize your own smart card. Choose from a
                 variety of templates, colors, and fonts to create a unique
                 design that reflects your style and brand.
               </h6>
-              <p>   <i class="bi bi-box" style="margin-right: 5px;"></i> Easy-to-use Design Tools</p>
-              <p><i class="bi bi-box" style="margin-right: 5px;"></i>Endless Design Possibilities</p>
-              <p><i class="bi bi-box" style="margin-right: 5px;"></i>Express Your Personal or Brand Identity</p>
+              <p>
+                <i class="bi bi-box" style="margin-right: 5px"></i> Easy-to-use
+                Design Tools
+              </p>
+              <p>
+                <i class="bi bi-box" style="margin-right: 5px"></i>Endless
+                Design Possibilities
+              </p>
+              <p>
+                <i class="bi bi-box" style="margin-right: 5px"></i>Express Your
+                Personal or Brand Identity
+              </p>
+              <div class="d-flex align-items-center">
+                <button
+                  type="button"
+                  class="btn btn-outline-light justify-content-center pt-2 px-2 mt-3"
+                >
+                  Get Started
+                </button>
+                <p class="px-2" style="margin-top: 30px">
+                  Learn More
+                  <i class="bi bi-caret-right"></i>
+                </p>
+              </div>
             </div>
           </div>
           <div class="col-md-5 p-5 d-flex justify-content-center">
@@ -264,6 +285,36 @@
             />
           </div>
         </div>
+      </div>
+    </div>
+    <div class="container-fluid mt-3">
+      <div class="row align-items-center" style="padding: 30px">
+        <div class="col-md-5" style="padding-left: 20px">
+          <h2 style="line-height: 45px">Choose the Perfect Smart Card Package for Your Needs</h2>
+        </div>
+
+        <div class="col-md-7">
+          <p style="line-height: 35px">
+            At Manjithaaza, we offer a range of Smart Card packages to suit
+            every requirement. Whether you're a professional looking to share
+            your contact information or a business wanting to enhance your
+            brand, our Prime, Deluxe, and Elite packages have got you covered.
+            Each package comes with unique features and benefits, allowing you
+            to create a personalized and impactful Smart Card that stands out
+            from the crowd. Explore our packages today and start making
+            meaningful connections with ease.
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-fluid mt-3">
+      <div class="row" style="padding: 30px">
+       <div class="col-md-12 d-flex justify-content-center">
+        <img src="./asset/img/big.png" class="img-fluid"/>
+       </div>
+
+       
       </div>
     </div>
 
@@ -281,6 +332,79 @@
         <div class="col-md-7">
           <div class="accordion accordion-flush" id="accordionFlushExample">
             <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                >
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the first item's accordion body.
+                </div>
+              </div>
+            </div>
+            <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                >
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the first item's accordion body.
+                </div>
+              </div>
+            </div>  <div class="accordion-item">
+              <h2 class="accordion-header">
+                <button
+                  class="accordion-button collapsed"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#flush-collapseOne"
+                  aria-expanded="false"
+                  aria-controls="flush-collapseOne"
+                >
+                  Accordion Item #1
+                </button>
+              </h2>
+              <div
+                id="flush-collapseOne"
+                class="accordion-collapse collapse"
+                data-bs-parent="#accordionFlushExample"
+              >
+                <div class="accordion-body">
+                  Placeholder content for this accordion, which is intended to
+                  demonstrate the <code>.accordion-flush</code> class. This is
+                  the first item's accordion body.
+                </div>
+              </div>
+            </div>  <div class="accordion-item">
               <h2 class="accordion-header">
                 <button
                   class="accordion-button collapsed"
@@ -365,6 +489,28 @@
       </div>
     </div>
 
+
+
+<div class="container-fluid">
+  <div class="row d-flex justify-content-between align-items-center">
+    <div class="col-6 p-5">
+     <h1>
+      Discover the power of NFC
+     </h1>
+     <p class="faq-paragraph">Experience seamless communication with our smart NFC cards</p>
+      <button type="button" class="btn btn-light me-2">Try</button>
+      <button type="button" class="btn btn-outline-light">Design</button>
+     </div>
+     <div class="col-4 p-5">
+       <img
+       src="./asset/img/about_pic1.png"
+       class="img-fluid"
+       alt="Hero Section Image"
+     />
+     </div>
+    </div>
+</div>
+
     <div class="container-fluid">
       <div class="row">
         <div class="">
@@ -377,8 +523,8 @@
 
     <div class="container">
       <div class="row mb-5">
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card" style="width: 100%">
             <img
               src="./asset/img/card.png"
               class="card-img-top"
@@ -386,7 +532,7 @@
             />
             <div class="card-body">
               <div class="d-flex">
-                <p class="me-4">category</p>
+                <p class="me-4">Category</p>
                 <p>5 min Read</p>
               </div>
               <h5 class="card-title">Unlocking the Power of Smart Cards</h5>
@@ -399,8 +545,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card" style="width: 100%">
             <img
               src="./asset/img/card.png"
               class="card-img-top"
@@ -408,7 +554,7 @@
             />
             <div class="card-body">
               <div class="d-flex">
-                <p class="me-4">category</p>
+                <p class="me-4">Category</p>
                 <p>5 min Read</p>
               </div>
               <h5 class="card-title">Unlocking the Power of Smart Cards</h5>
@@ -421,8 +567,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card" style="width: 100%">
             <img
               src="./asset/img/card.png"
               class="card-img-top"
@@ -430,7 +576,7 @@
             />
             <div class="card-body">
               <div class="d-flex">
-                <p class="me-4">category</p>
+                <p class="me-4">Category</p>
                 <p>5 min Read</p>
               </div>
               <h5 class="card-title">Unlocking the Power of Smart Cards</h5>
@@ -443,8 +589,8 @@
             </div>
           </div>
         </div>
-        <div class="col-md-3">
-          <div class="card" style="width: 18rem">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3">
+          <div class="card" style="width: 100%">
             <img
               src="./asset/img/card.png"
               class="card-img-top"
@@ -452,7 +598,7 @@
             />
             <div class="card-body">
               <div class="d-flex">
-                <p class="me-4">category</p>
+                <p class="me-4">Category</p>
                 <p>5 min Read</p>
               </div>
               <h5 class="card-title">Unlocking the Power of Smart Cards</h5>
